# spify

./: CMakeLists.txt
src/: SpifyParserGenerator.py
